// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductTileBuy /> irenders ProductTileBuy 1`] = `
<div
  className="mfui-product-tile-buy class"
>
  <Button
    className="mfui-product-tile-buy__button mfui-product-tile-buy__button_single-button"
    disabledColor="gray"
    downColor="dark"
    hoverColor="green"
    href="#"
    onClick={[MockFunction]}
    padding={true}
    passiveColor="green"
    showSpinner={false}
    sizeAll="medium"
    type="button"
    width="auto"
  >
    Купить
  </Button>
</div>
`;

exports[`<ProductTileBuy /> irenders empty ProductTileBuy 1`] = `
<div
  className="mfui-product-tile-buy"
/>
`;

exports[`<ProductTileBuy /> renders ProductTileBuy with connectButton 1`] = `
<div
  className="mfui-product-tile-buy class"
>
  <Button
    className="mfui-product-tile-buy__button"
    disabledColor="gray"
    downColor="dark"
    hoverColor="green"
    href="#"
    padding={true}
    passiveColor="green"
    showSpinner={false}
    sizeAll="medium"
    type="button"
    width="auto"
  >
    Купить
  </Button>
  <TextLink
    className="mfui-product-tile-buy__detail-link"
    color="blue"
    href="#"
    onClick={[MockFunction]}
    target="_blank"
    underlineStyle="solid"
    underlineVisibility="hover"
  >
    Подключить
  </TextLink>
</div>
`;
